-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.13.3, Qt Creator 4.14.0, Qt Creator 4.15.0-rc1
-
-
9c86e6746fb82d6244cc2fc565d5f730c67f8106 (qt-creator/qt-creator/6.0)
With Android Clang Multi-Abi or Clang arm, Clang-Tidy and Clazy Analyze fails with the following error.
C:\Qt\5.15.3\android\include\QtCore/qprocessordetection.h:150:6: error: "ARM architecture too old" [clang-diagnostic-error] # error "ARM architecture too old"
How to reproduce :
1. Open Qt Analogclock example (https://doc.qt.io/qt-5/qtwidgets-widgets-analogclock-example.html)
2. Select kit e.g. Android Qt5.15.3 Clang Multi-Abi
3. Run Clang-Tidy and Clazy
The whole log is attached.
For Gerrit Dashboard: QTCREATORBUG-25615 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
376185,3 | CppEditor: Prefer target flags from the build system | 6.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
437222,2 | C++ support: Consider project-specific target triple | 9.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |