CppEditor: Prefer target flags from the build system

The build system has in-depth knowledge of how to build the project and
is therefore a much more reliable source of information about the
concrete target triple than what we extracted generically from the
toolchain.

Fixes: QTCREATORBUG-25615
Change-Id: I820f8dd99da3832326308510a50aa7cbb4aa8fdb
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>